changes timeout for new round

--- a/simon-says.html
+++ b/simon-says.html
@@ -49,15 +49,15 @@
 
 			<div class="submit">Submit</div>
 			
-		</div>
+	</div>
 
 	</div>
-	
-		<ul class="score"> Score Board
-			<li>Your name...</li>
+		<div class="score">
+			<h4>Score Board</h4>
+			<ul>
+				<li>Your name...</li>
 		</ul>
-	
-	
+		</div>
 	
 	<script src="scripts/jquery-2.1.4.js"></script>
 	<script type="text/javascript" src="scripts/simon-says.js"></script>
